INTYGFV-16438: Handle query on status. Extended testability with functionality to create signed certificates. Integration tests for querying signed certificates. (#121)
Co-authored-by: Matias Wurschmidt-Wang <matias.wurschmidt@soprasteria.com>